[gd_scene format=3 uid="uid://l1tos1yqcrg7"]

[ext_resource type="Script" path="res://Scripts/UI/HUD.gd" id="1_hud"]
[ext_resource type="Script" path="res://Scripts/UI/UpgradePanel.gd" id="2_upgrade_panel"]
[ext_resource type="Script" path="res://Scripts/UI/AbilityHotbar.gd" id="4_hotbar"]
[ext_resource type="Script" path="res://Scripts/UI/DevPanel.gd" id="5_devpanel"]
[ext_resource type="Script" path="res://Scripts/UI/PrestigeScreen.gd" id="6_prestige_screen"]

[sub_resource type="GDScript" id="main_script"]
script/source = "extends Node2D

var portal_center = Vector2(960, 540)  # Centered on screen
var portal_radius = 220.0

func _ready():
	get_window().title = \"Void Rift Clicker\"
	print(\"Main scene loaded!\")

func _input(event):
	if event.is_action_pressed(\"toggle_upgrades\"):
		var upgrade_panel = $UI/UpgradePanel
		if upgrade_panel:
			upgrade_panel.visible = !upgrade_panel.visible

	# Toggle Prestige Screen with P or G key
	if event is InputEventKey and event.pressed:
		if event.keycode == KEY_P or event.keycode == KEY_G:
			var prestige_screen = $UI/PrestigeScreen
			if prestige_screen:
				prestige_screen.toggle()

	# Direct click detection as fallback
	if event is InputEventMouseButton:
		if event.button_index == MOUSE_BUTTON_LEFT and event.pressed:
			var mouse_pos = get_global_mouse_position()
			var distance = mouse_pos.distance_to(portal_center)
			if distance <= portal_radius:
				# Trigger portal visual effects
				var portal_visual = get_node_or_null(\"Portal/PortalVisual\")
				if portal_visual:
					portal_visual.click_scale = 0.96
					portal_visual.click_rotation_boost += 0.25
					# Only spawn a ring once per second
					if portal_visual.ring_cooldown <= 0:
						portal_visual.spawn_cosmic_ring()
						portal_visual.ring_cooldown = 1.0
				var gm = get_node_or_null(\"/root/GameManager\")
				if gm:
					gm.process_click()
"

[sub_resource type="GDScript" id="bg_script"]
script/source = "extends Node2D

var stars = []
var distant_stars = []
var nebula_time = 0.0

func _ready():
	print(\"SpaceBackground: Script loaded!\")
	# Use larger area for stars to cover any viewport size
	var max_x = 2560.0
	var max_y = 1440.0
	# Create layered star field
	# Distant tiny stars
	for i in range(500):
		distant_stars.append({
			\"pos\": Vector2(randf() * max_x, randf() * max_y),
			\"size\": randf_range(0.3, 1.0),
			\"brightness\": randf_range(0.1, 0.4),
			\"twinkle_speed\": randf_range(0.5, 2),
			\"twinkle_offset\": randf() * TAU
		})

	# Closer brighter stars
	for i in range(200):
		stars.append({
			\"pos\": Vector2(randf() * max_x, randf() * max_y),
			\"size\": randf_range(1.0, 2.5),
			\"brightness\": randf_range(0.5, 1.0),
			\"twinkle_speed\": randf_range(1, 3),
			\"twinkle_offset\": randf() * TAU,
			\"color\": randf()
		})
	queue_redraw()

func _process(delta):
	nebula_time += delta * 0.3
	queue_redraw()

func _draw():
	# Deep space background - dark blue gradient (cover full viewport)
	var vp_size = get_viewport_rect().size
	draw_rect(Rect2(-100, -100, vp_size.x + 200, vp_size.y + 200), Color(0.01, 0.02, 0.05))

	# Subtle nebula layers
	for i in range(12):
		var nx = 200 + i * 160 + sin(nebula_time * 0.2 + i * 0.8) * 30
		var ny = 150 + i * 80 + cos(nebula_time * 0.15 + i * 0.6) * 25
		var nc = Color(0.03, 0.06, 0.12, 0.06)
		draw_circle(Vector2(nx, ny), 200 + i * 25, nc)

	# Blue nebula highlights
	for i in range(6):
		var nx = 400 + i * 280
		var ny = 300 + sin(i * 1.5) * 200
		draw_circle(Vector2(nx, ny), 180, Color(0.05, 0.1, 0.2, 0.05))

	var time = Time.get_ticks_msec() / 1000.0

	# Draw distant stars
	for star in distant_stars:
		var twinkle = 0.7 + 0.3 * sin(time * star.twinkle_speed + star.twinkle_offset)
		var alpha = star.brightness * twinkle
		draw_circle(star.pos, star.size, Color(0.7, 0.8, 1.0, alpha))

	# Draw closer stars
	for star in stars:
		var twinkle = 0.6 + 0.4 * sin(time * star.twinkle_speed + star.twinkle_offset)
		var alpha = star.brightness * twinkle
		var c = get_star_color(star.color, alpha)
		draw_circle(star.pos, star.size, c)
		# Add glow to bright stars
		if star.brightness > 0.7:
			draw_circle(star.pos, star.size * 2, Color(c.r, c.g, c.b, alpha * 0.2))

	# Draw planet in corner
	draw_planet(Vector2(1780, 920), 50)

	# Small decorative elements like in reference
	draw_circle(Vector2(1850, 1020), 4, Color(0.4, 0.6, 0.8, 0.6))
	draw_circle(Vector2(1820, 1000), 3, Color(0.4, 0.6, 0.8, 0.4))

func get_star_color(val, alpha):
	if val < 0.5:
		return Color(1, 1, 1, alpha)
	elif val < 0.75:
		return Color(0.85, 0.92, 1.0, alpha)
	elif val < 0.9:
		return Color(1.0, 0.98, 0.9, alpha)
	else:
		return Color(1.0, 0.9, 0.8, alpha)

func draw_planet(pos, radius):
	# Planet shadow/base
	draw_circle(pos, radius + 2, Color(0.02, 0.03, 0.06, 0.8))
	# Planet body
	draw_circle(pos, radius, Color(0.12, 0.15, 0.22, 0.95))
	# Surface detail
	draw_circle(pos + Vector2(-radius*0.3, -radius*0.2), radius*0.4, Color(0.08, 0.1, 0.15, 0.5))
	# Atmosphere rim light
	draw_arc(pos, radius - 1, -0.8, 1.2, 24, Color(0.3, 0.45, 0.6, 0.4), 2.0)
	# Glow
	for i in range(4):
		draw_circle(pos, radius + 4 + i * 3, Color(0.15, 0.25, 0.4, 0.03 - i * 0.007))
"

[sub_resource type="GDScript" id="portal_gd_script"]
script/source = "extends Node2D

var rotation_speed = 0.8  # Slower rotation for majestic feel
var galaxy_rotation = 0.0
var pulse = 0.0
var is_hovered = false
var click_scale = 1.0
var click_rotation_boost = 0.0  # Extra rotation speed on click

# Cosmic ring waves - each ring expands and fades independently
var cosmic_rings = []  # Array of {life, max_life, start_size, color_type}
var ring_cooldown = 0.0  # Timer to limit ring spawns to once per second

# Star data arrays
var bulge_stars = []
var disk_stars = []
var arm_stars = []
var bright_stars = []
var nebulae = []

# Click effect particles
var click_particles = []
var vortex_intensity = 0.0

signal portal_clicked

func _ready():
	print(\"Galaxy: Creating Milky Way...\")
	create_galaxy()

func create_galaxy():
	var rng = RandomNumberGenerator.new()
	rng.seed = 12345  # Consistent galaxy

	# Central bulge stars (very dense, yellowish-orange)
	for i in range(800):
		var angle = rng.randf() * TAU
		var dist = rng.randf() * rng.randf() * rng.randf() * 70  # More concentrated
		bulge_stars.append({
			\"angle\": angle,
			\"dist\": dist,
			\"size\": rng.randf_range(0.4, 2.5) * (1.0 - dist/90.0),
			\"brightness\": rng.randf_range(0.6, 1.0),
			\"temp\": rng.randf_range(0.0, 0.35)  # Warm colors
		})

	# Disk stars (spread throughout, dimmer)
	for i in range(2000):
		var angle = rng.randf() * TAU
		var dist = 30 + rng.randf() * rng.randf() * 200
		disk_stars.append({
			\"angle\": angle,
			\"dist\": dist,
			\"size\": rng.randf_range(0.2, 1.0),
			\"brightness\": rng.randf_range(0.15, 0.5) * (1.0 - dist/280.0),
			\"temp\": rng.randf()
		})

	# Spiral arm stars - 4 major arms (like Milky Way: Perseus, Sagittarius, Scutum-Centaurus, Norma)
	for arm in range(4):
		var arm_offset = arm * TAU / 4
		# Main arm stars - denser
		for i in range(600):
			var t = rng.randf()
			var spiral_angle = arm_offset + t * 2.8 + rng.randf_range(-0.15, 0.15)
			var base_r = 30 + t * 200
			var r = base_r + rng.randf_range(-15, 15) * (0.3 + t * 0.7)
			if r > 0 and r < 235:
				arm_stars.append({
					\"angle\": spiral_angle,
					\"dist\": r,
					\"size\": rng.randf_range(0.5, 2.2),
					\"brightness\": rng.randf_range(0.5, 1.0) * (0.7 + 0.3 * (1.0 - t)),
					\"temp\": rng.randf_range(0.4, 1.0),  # Bluer in arms
					\"arm\": arm
				})
		# Minor arm between major arms
		var minor_offset = arm_offset + TAU / 8
		for i in range(200):
			var t = rng.randf()
			var spiral_angle = minor_offset + t * 2.5 + rng.randf_range(-0.2, 0.2)
			var r = 50 + t * 160 + rng.randf_range(-20, 20)
			if r > 0 and r < 220:
				arm_stars.append({
					\"angle\": spiral_angle,
					\"dist\": r,
					\"size\": rng.randf_range(0.3, 1.5),
					\"brightness\": rng.randf_range(0.3, 0.7),
					\"temp\": rng.randf_range(0.5, 0.9),
					\"arm\": arm
				})

	# Bright blue giant stars and O/B type stars in arms
	for i in range(120):
		var arm = rng.randi() % 4
		var arm_offset = arm * TAU / 4
		var t = rng.randf_range(0.15, 0.85)
		var spiral_angle = arm_offset + t * 2.8 + rng.randf_range(-0.08, 0.08)
		var r = 35 + t * 185 + rng.randf_range(-10, 10)
		bright_stars.append({
			\"angle\": spiral_angle,
			\"dist\": r,
			\"size\": rng.randf_range(1.8, 3.5),
			\"brightness\": rng.randf_range(0.85, 1.0),
			\"temp\": rng.randf_range(0.85, 1.0)  # Blue/blue-white
		})

	# Nebulae (star-forming regions in arms) - pink/red and blue
	for i in range(25):
		var arm = rng.randi() % 4
		var arm_offset = arm * TAU / 4
		var t = rng.randf_range(0.2, 0.8)
		var spiral_angle = arm_offset + t * 2.8 + rng.randf_range(-0.1, 0.1)
		var r = 40 + t * 170
		nebulae.append({
			\"angle\": spiral_angle,
			\"dist\": r,
			\"size\": rng.randf_range(15, 35),
			\"color_type\": rng.randi() % 3  # 0=pink, 1=blue, 2=purple
		})

func _process(delta):
	# Add click rotation boost to normal rotation (gentler boost)
	galaxy_rotation += delta * (rotation_speed + click_rotation_boost)
	pulse += delta * 1.5
	click_scale = lerp(click_scale, 1.0 if not is_hovered else 1.03, delta * 6)

	# Decay rotation boost smoothly
	click_rotation_boost *= 0.97

	# Update ring cooldown
	if ring_cooldown > 0:
		ring_cooldown -= delta

	# Update cosmic rings - they expand and fade over time
	var rings_to_remove = []
	for i in range(cosmic_rings.size()):
		cosmic_rings[i].life -= delta
		if cosmic_rings[i].life <= 0:
			rings_to_remove.append(i)
	# Remove expired rings (reverse order to maintain indices)
	for i in range(rings_to_remove.size() - 1, -1, -1):
		cosmic_rings.remove_at(rings_to_remove[i])

	# Update click particles
	var particles_to_remove = []
	for i in range(click_particles.size()):
		var p = click_particles[i]
		p.life -= delta
		p.pos += p.vel * delta
		p.vel *= 0.96  # Slow down
		p.size *= 0.97  # Shrink
		if p.life <= 0:
			particles_to_remove.append(i)

	# Remove dead particles (in reverse order)
	for i in range(particles_to_remove.size() - 1, -1, -1):
		click_particles.remove_at(particles_to_remove[i])

	# Decay vortex effect
	vortex_intensity *= 0.92

	queue_redraw()

func _draw():
	var center = Vector2.ZERO
	var draw_scale = click_scale
	var time = Time.get_ticks_msec() / 1000.0

	# Outer halo (dark matter halo effect) - subtle blue glow
	for i in range(30):
		var alpha = 0.025 - i * 0.0008
		var r = (250 + i * 12) * draw_scale
		draw_circle(center, r, Color(0.08, 0.12, 0.22, alpha))

	draw_set_transform(center, galaxy_rotation * 0.0174533, Vector2(draw_scale, draw_scale))

	# Galaxy disk glow - gradient from blue edge to yellow center
	for i in range(50):
		var r = 240 - i * 4.5
		var t = i / 50.0
		var red = 0.12 + t * 0.5
		var green = 0.1 + t * 0.42
		var blue = 0.22 - t * 0.12
		var alpha = 0.006 + t * 0.018
		draw_circle(Vector2.ZERO, r, Color(red, green, blue, alpha))

	# Draw nebulae first (behind stars)
	for neb in nebulae:
		var pos = Vector2(cos(neb.angle), sin(neb.angle)) * neb.dist
		var neb_pulse = 0.85 + 0.15 * sin(time * 0.5 + neb.angle * 2)
		var c: Color
		match neb.color_type:
			0: c = Color(0.9, 0.4, 0.5, 0.08 * neb_pulse)  # Pink/red
			1: c = Color(0.4, 0.6, 0.9, 0.07 * neb_pulse)  # Blue
			2: c = Color(0.6, 0.4, 0.8, 0.06 * neb_pulse)  # Purple
		for j in range(4):
			draw_circle(pos, neb.size * (1.0 - j * 0.2), Color(c.r, c.g, c.b, c.a * (1.0 - j * 0.25)))

	# Draw spiral arms as glowing regions - multiple layers
	for arm in range(4):
		var arm_offset = arm * TAU / 4
		# Dark dust lanes between arms (subtle)
		draw_spiral_arm(arm_offset - 0.2, Color(0.02, 0.02, 0.04, 0.15), 40)
		# Bright arm core
		draw_spiral_arm(arm_offset, Color(0.35, 0.45, 0.7, 0.12), 45)
		draw_spiral_arm(arm_offset + 0.03, Color(0.45, 0.55, 0.8, 0.08), 30)
		draw_spiral_arm(arm_offset + 0.06, Color(0.55, 0.65, 0.9, 0.05), 18)

	# Draw disk stars (background)
	for star in disk_stars:
		var twinkle = 0.75 + 0.25 * sin(time * 2.0 + star.angle * 4)
		var pos = Vector2(cos(star.angle), sin(star.angle)) * star.dist
		var c = get_star_color(star.temp, star.brightness * twinkle)
		draw_circle(pos, star.size, c)

	# Draw arm stars (brighter, more prominent)
	for star in arm_stars:
		var twinkle = 0.7 + 0.3 * sin(time * 2.5 + star.dist * 0.04)
		var pos = Vector2(cos(star.angle), sin(star.angle)) * star.dist
		var c = get_star_color(star.temp, star.brightness * twinkle)
		draw_circle(pos, star.size * 1.15, c)

	# Draw bright blue giants with glow halos
	for star in bright_stars:
		var twinkle = 0.75 + 0.25 * sin(time * 3.5 + star.angle * 3)
		var pos = Vector2(cos(star.angle), sin(star.angle)) * star.dist
		var alpha = star.brightness * twinkle
		# Outer glow
		draw_circle(pos, star.size * 3.0, Color(0.3, 0.5, 1.0, alpha * 0.12))
		draw_circle(pos, star.size * 2.0, Color(0.5, 0.7, 1.0, alpha * 0.25))
		draw_circle(pos, star.size * 1.3, Color(0.7, 0.85, 1.0, alpha * 0.5))
		draw_circle(pos, star.size, Color(0.9, 0.95, 1.0, alpha))

	# Draw bulge stars (on top, warm colors)
	for star in bulge_stars:
		var twinkle = 0.85 + 0.15 * sin(time * 1.8 + star.angle * 5)
		var pos = Vector2(cos(star.angle), sin(star.angle)) * star.dist
		var c = get_star_color(star.temp, star.brightness * twinkle)
		draw_circle(pos, star.size, c)

	draw_set_transform(Vector2.ZERO, 0, Vector2.ONE)

	# Galactic core - bright, pulsing center
	var core_pulse = 1.0 + sin(pulse) * 0.06

	# Outer warm glow (orange-yellow)
	for i in range(25):
		var r = (65 - i * 2.2) * core_pulse * draw_scale
		var t = i / 25.0
		var alpha = 0.025 + t * 0.045
		draw_circle(center, r, Color(0.95, 0.7, 0.35, alpha))

	# Middle bright glow (yellow-white)
	for i in range(15):
		var r = (38 - i * 2) * core_pulse * draw_scale
		var alpha = 0.08 + i * 0.055
		draw_circle(center, r, Color(1.0, 0.9, 0.65, alpha))

	# Inner core (white-yellow)
	for i in range(10):
		var r = (18 - i * 1.5) * core_pulse * draw_scale
		var alpha = 0.25 + i * 0.08
		draw_circle(center, r, Color(1.0, 0.96, 0.85, alpha))

	# Bright center point
	draw_circle(center, 6 * draw_scale, Color(1.0, 0.98, 0.92, 0.95))
	draw_circle(center, 3 * draw_scale, Color(1, 1, 0.98, 1))

	# Draw cosmic ring waves - smooth expanding rings
	for ring in cosmic_rings:
		var progress = 1.0 - (ring.life / ring.max_life)  # 0 to 1 as ring expands
		var ring_size = lerp(ring.start_size, ring.end_size, ease(progress, 0.5))
		# Fade out smoothly - strongest in middle of life, fades at end
		var alpha = sin(progress * PI) * 0.7

		# Ring color based on type
		var ring_color: Color
		match ring.color_type:
			0: ring_color = Color(0.7, 0.4, 1.0, alpha)   # Purple
			1: ring_color = Color(0.4, 0.8, 1.0, alpha)   # Cyan
			2: ring_color = Color(1.0, 0.8, 0.4, alpha)   # Gold

		# Ring gets thinner as it expands (starts at 4, goes to 0.5)
		var ring_width = lerp(4.0, 0.5, progress)
		draw_arc(center, ring_size * draw_scale, 0, TAU, 64, ring_color, ring_width)
		# Outer glow also gets thinner
		var glow_width = lerp(6.0, 1.0, progress)
		var glow_color = Color(ring_color.r, ring_color.g, ring_color.b, alpha * 0.3)
		draw_arc(center, (ring_size + 3) * draw_scale, 0, TAU, 64, glow_color, glow_width)

	# Particles removed - keeping just the cosmic rings

func draw_spiral_arm(start_angle, color, width):
	var points = PackedVector2Array()
	var colors = PackedColorArray()
	var segments = 70

	for i in range(segments + 1):
		var t = i / float(segments)
		var angle = start_angle + t * 2.8
		var r = 25 + t * 210
		points.append(Vector2(cos(angle) * r, sin(angle) * r))
		var fade = sin(t * PI) * (1.0 - t * 0.25)
		colors.append(Color(color.r, color.g, color.b, color.a * fade))

	if points.size() > 1:
		draw_polyline_colors(points, colors, width)

func get_star_color(temp, alpha):
	# temp: 0 = red/orange (cool M type), 1 = blue (hot O/B type)
	if temp < 0.15:
		return Color(1.0, 0.75, 0.5, alpha)   # Orange (K type)
	elif temp < 0.3:
		return Color(1.0, 0.88, 0.65, alpha)  # Yellow-orange (G type)
	elif temp < 0.5:
		return Color(1.0, 0.98, 0.85, alpha)  # Yellow-white (F type)
	elif temp < 0.7:
		return Color(1.0, 1.0, 1.0, alpha)    # White (A type)
	elif temp < 0.85:
		return Color(0.85, 0.92, 1.0, alpha)  # Blue-white (B type)
	else:
		return Color(0.65, 0.8, 1.0, alpha)   # Blue (O type)

func _on_click_area_input_event(_viewport, event, _shape_idx):
	if event is InputEventMouseButton:
		if event.button_index == MOUSE_BUTTON_LEFT and event.pressed:
			click_scale = 0.96  # Very gentle squeeze on click
			click_rotation_boost += 0.25  # Very subtle spin boost
			# Only spawn a ring once per second
			if ring_cooldown <= 0:
				spawn_cosmic_ring()
				ring_cooldown = 1.0  # 1 second cooldown
			emit_signal(\"portal_clicked\")
			var gm = get_node_or_null(\"/root/GameManager\")
			if gm:
				gm.process_click()

func spawn_cosmic_ring():
	# Spawn a new cosmic ring wave that will expand outward
	var ring = {
		\"life\": 1.8,  # How long the ring lasts
		\"max_life\": 1.8,
		\"start_size\": 20.0,  # Starting radius
		\"end_size\": 300.0,  # Ending radius
		\"color_type\": randi() % 3  # 0=purple, 1=cyan, 2=gold
	}
	cosmic_rings.append(ring)

func spawn_click_effect():
	# Trigger vortex pulse
	vortex_intensity = 0.6  # Reduced vortex intensity

	# Spawn star burst particles
	var num_particles = randi_range(12, 20)
	for i in range(num_particles):
		var angle = randf() * TAU
		var speed = randf_range(150, 350)
		var particle = {
			\"pos\": Vector2.ZERO,
			\"vel\": Vector2(cos(angle), sin(angle)) * speed,
			\"size\": randf_range(2, 5),
			\"life\": randf_range(0.4, 0.8),
			\"color_type\": randi() % 4  # 0=white, 1=yellow, 2=cyan, 3=purple
		}
		click_particles.append(particle)

	# Add some inner spiral particles
	for i in range(8):
		var angle = randf() * TAU
		var dist = randf_range(20, 60)
		var speed = randf_range(50, 120)
		var particle = {
			\"pos\": Vector2(cos(angle), sin(angle)) * dist,
			\"vel\": Vector2(cos(angle + 1.5), sin(angle + 1.5)) * speed,
			\"size\": randf_range(1.5, 3),
			\"life\": randf_range(0.3, 0.5),
			\"color_type\": 1  # Yellow/gold
		}
		click_particles.append(particle)

func _on_click_area_mouse_entered():
	is_hovered = true
	Input.set_default_cursor_shape(Input.CURSOR_POINTING_HAND)

func _on_click_area_mouse_exited():
	is_hovered = false
	Input.set_default_cursor_shape(Input.CURSOR_ARROW)
"

[sub_resource type="CircleShape2D" id="CircleShape2D_portal"]
radius = 220.0

[sub_resource type="GDScript" id="click_connector_script"]
script/source = "extends Node2D

# This script connects the GDScript portal to the C# GameManager

func _ready():
	print(\"ClickConnector: Initializing...\")
	var portal = get_node_or_null(\"../PortalVisual\")
	if portal:
		portal.connect(\"portal_clicked\", _on_portal_clicked)
		print(\"ClickConnector: Connected to portal signal\")
	else:
		print(\"ClickConnector: ERROR - Could not find PortalVisual!\")

func _on_portal_clicked():
	print(\"ClickConnector: Portal clicked!\")
	# Call the C# GameManager to process the click
	var game_manager = get_node_or_null(\"/root/GameManager\")
	if game_manager:
		print(\"ClickConnector: Found GameManager, calling ProcessClick\")
		game_manager.call(\"ProcessClick\")
	else:
		print(\"ClickConnector: ERROR - GameManager not found!\")
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_topbar"]
bg_color = Color(0.08, 0.04, 0.12, 0.95)
border_width_bottom = 2
border_color = Color(0.5, 0.3, 0.8, 0.5)

[node name="Main" type="Node2D" unique_id=1832979285]
script = SubResource("main_script")

[node name="Background" type="CanvasLayer" parent="." unique_id=1900017383]
layer = -10

[node name="SpaceDrawing" type="Node2D" parent="Background" unique_id=131219029]
script = SubResource("bg_script")

[node name="Portal" type="Node2D" parent="." unique_id=1320837996]
position = Vector2(960, 540)

[node name="PortalVisual" type="Node2D" parent="Portal" unique_id=1132234076]
script = SubResource("portal_gd_script")

[node name="ClickArea" type="Area2D" parent="Portal/PortalVisual" unique_id=533737836]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal/PortalVisual/ClickArea" unique_id=214339372]
shape = SubResource("CircleShape2D_portal")

[node name="ClickConnector" type="Node2D" parent="Portal" unique_id=1360828077]
script = SubResource("click_connector_script")

[node name="UI" type="CanvasLayer" parent="." unique_id=1251542181]
layer = 10

[node name="HUD" type="Control" parent="UI" unique_id=333456303]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hud")

[node name="TopBar" type="PanelContainer" parent="UI/HUD" unique_id=246757188]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_topbar")

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD/TopBar" unique_id=877640038]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="UI/HUD/TopBar/MarginContainer" unique_id=817969680]
layout_mode = 2
theme_override_constants/separation = 60

[node name="EnergyContainer" type="VBoxContainer" parent="UI/HUD/TopBar/MarginContainer/HBox" unique_id=65240665]
layout_mode = 2

[node name="EnergyTitle" type="Label" parent="UI/HUD/TopBar/MarginContainer/HBox/EnergyContainer" unique_id=1961402990]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.5, 1, 1)
theme_override_font_sizes/font_size = 14
text = "VOID ENERGY"

[node name="VoidEnergyLabel" type="Label" parent="UI/HUD/TopBar/MarginContainer/HBox/EnergyContainer" unique_id=1620832473]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 36
text = "0"

[node name="IncomeContainer" type="VBoxContainer" parent="UI/HUD/TopBar/MarginContainer/HBox" unique_id=1038977391]
layout_mode = 2

[node name="IncomeTitle" type="Label" parent="UI/HUD/TopBar/MarginContainer/HBox/IncomeContainer" unique_id=1444771331]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.5, 1, 1)
theme_override_font_sizes/font_size = 14
text = "PER SECOND"

[node name="PassiveIncomeLabel" type="Label" parent="UI/HUD/TopBar/MarginContainer/HBox/IncomeContainer" unique_id=443822166]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.7, 1)
theme_override_font_sizes/font_size = 28
text = "+0/sec"

[node name="ClickContainer" type="VBoxContainer" parent="UI/HUD/TopBar/MarginContainer/HBox" unique_id=155597152]
layout_mode = 2

[node name="ClickTitle" type="Label" parent="UI/HUD/TopBar/MarginContainer/HBox/ClickContainer" unique_id=1094448065]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.5, 1, 1)
theme_override_font_sizes/font_size = 14
text = "CLICK POWER"

[node name="ClickPowerLabel" type="Label" parent="UI/HUD/TopBar/MarginContainer/HBox/ClickContainer" unique_id=883272423]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.5, 1)
theme_override_font_sizes/font_size = 28
text = "+1/click"

[node name="FrenzyIndicator" type="PanelContainer" parent="UI/HUD" unique_id=1767689198]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 140.0
grow_horizontal = 2

[node name="FrenzyLabel" type="Label" parent="UI/HUD/FrenzyIndicator" unique_id=691755158]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "✦ COSMIC SURGE x2 ✦"
horizontal_alignment = 1

[node name="UpgradePanel" type="Control" parent="UI" unique_id=1409224465]
visible = false
mouse_filter = 2
script = ExtResource("2_upgrade_panel")

[node name="AbilityHotbar" type="Control" parent="UI" unique_id=1721380572]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_hotbar")

[node name="DevPanel" type="Control" parent="UI" unique_id=929743881]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("5_devpanel")

[node name="PrestigeScreen" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("6_prestige_screen")

[node name="Instructions" type="Label" parent="UI" unique_id=1450276151]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -25.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.5, 0.55, 0.65, 0.8)
theme_override_font_sizes/font_size = 11
text = "Click the galaxy to harvest energy! Press 1-5 for abilities. Press P for Prestige."
horizontal_alignment = 1

[connection signal="input_event" from="Portal/PortalVisual/ClickArea" to="Portal/PortalVisual" method="_on_click_area_input_event"]
[connection signal="mouse_entered" from="Portal/PortalVisual/ClickArea" to="Portal/PortalVisual" method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="Portal/PortalVisual/ClickArea" to="Portal/PortalVisual" method="_on_click_area_mouse_exited"]
